Fixed portal colors to align with newer styles

--- a/src/context/ContextItem.scss
+++ b/src/context/ContextItem.scss
@@ -1,3 +1,4 @@
+@import '../styles/variables';
 
 .context-portal .context-menu-item {
     padding: 5px 10px;
@@ -7,7 +8,7 @@
 }
 
 .context-portal .context-menu-item[data-active="true"] {
-    background-color: #1384b5;
+    background-color: $interface-blue;
     color: #fff;
 }
 
