--- a/src/notes/FluxNotesEditor.scss
+++ b/src/notes/FluxNotesEditor.scss
@@ -232,7 +232,7 @@
     }
 
     li.selected {
-        background-color: #297DA2;
+        background-color: $interface-blue;
         color: #fff;
     }
 }
